# cplus

SER321-master/: README.md
SER321-master/Assigns/Assign2/: build.xml
SER321-master/Assigns/Assign2/src/cpp/: MovieDescription.cpp  MovieDescription.hpp  MovieLibrary.cpp  MovieLibrary.hpp  main.cpp
SER321-master/Assigns/Assign2/src/java/: MovieDescription.java  MovieLibrary.java  main.java
SER321-master/Assigns/Assign3/: CMakeLists.txt  build.xml  media.json
SER321-master/Assigns/Assign3/lib/jsoncpp/include/json/: value.h
SER321-master/Assigns/Assign3/src/cpp/: MovieDescription.cpp  MovieDescription.hpp  MovieLibrary.cpp  MovieLibrary.hpp  main.cpp
SER321-master/Assigns/Assign3/src/java/: MovieDescription.java  MovieLibrary.java  main.java
SER321-master/Examples/CppFraction/: build.xml  buildscript  makefile  readme.txt
SER321-master/Examples/CppFraction/src/: main.cpp
SER321-master/Examples/Employee/: build.xml  policyClient  policyServer
SER321-master/Examples/GroupJson/: build.xml
assign3/: CMakeLists.txt  MovieDescription.cpp  MovieDescription.hpp  MovieLibrary.cpp  MovieLibrary.hpp  main.cpp  movies.json  moviesCPP.json
assign3/lib/jsoncpp/include/json/: reader.h
assign3/lib/jsoncpp/src/lib_json/: json_reader.cpp  json_value.cpp  json_writer.cpp
assign3/src/cpp/: MovieDescription.cpp  MovieDescription.hpp  MovieLibrary.cpp  MovieLibrary.hpp  main.cpp
obj_classes/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
vectors/: CMakeLists.txt  main.cpp
vectors_of_objects/: CMakeLists.txt  main.cpp
(+7 files in other folders)
